fix some bug and add forgot/reset password