@@ -1,29 +1,30 @@
 package com.nhom4.xoxo.service.serviceImp;
 
-import com.nhom4.xoxo.entity.User;
-import com.nhom4.xoxo.repository.UserRepository;
-import com.nhom4.xoxo.entity.Role;
-import com.nhom4.xoxo.entity.AuthProvider;
-import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
-
-import com.nhom4.xoxo.dto.req.MailMessage;
-import com.nhom4.xoxo.dto.req.RegisterRequest;
-import com.nhom4.xoxo.dto.res.UserResponseProjection;
-import com.nhom4.xoxo.service.UserService;
-import com.nhom4.xoxo.entity.VerificationToken;
-import com.nhom4.xoxo.kafka.MailProducer;
-import com.nhom4.xoxo.repository.VerificationTokenRepository;
-import java.util.UUID;
 import java.time.LocalDateTime;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.HashSet;
+import java.util.UUID;
 
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Service;
+
+import com.nhom4.xoxo.dto.req.ForgotPasswordRequest;
+import com.nhom4.xoxo.dto.req.MailMessage;
+import com.nhom4.xoxo.dto.req.RegisterRequest;
+import com.nhom4.xoxo.dto.req.ResetPasswordRequest;
+import com.nhom4.xoxo.dto.res.UserResponseProjection;
+import com.nhom4.xoxo.entity.AuthProvider;
+import com.nhom4.xoxo.entity.Role;
+import com.nhom4.xoxo.entity.User;
+import com.nhom4.xoxo.entity.VerificationToken;
 import com.nhom4.xoxo.exception.ForbiddenException;
+import com.nhom4.xoxo.exception.NotFoundException;
 import com.nhom4.xoxo.exception.ServiceException;
+import com.nhom4.xoxo.kafka.MailProducer;
+import com.nhom4.xoxo.repository.UserRepository;
+import com.nhom4.xoxo.repository.VerificationTokenRepository;
+import com.nhom4.xoxo.service.UserService;
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -32,8 +33,8 @@ public class UserServiceImpl implements UserService {
     private final MailProducer mailProducer;
     private final VerificationTokenRepository verificationTokenRepository;
 
-    
-    public UserServiceImpl(UserRepository userRepository, PasswordEncoder passwordEncoder, MailProducer mailProducer, VerificationTokenRepository verificationTokenRepository) {
+    public UserServiceImpl(UserRepository userRepository, PasswordEncoder passwordEncoder, MailProducer mailProducer,
+            VerificationTokenRepository verificationTokenRepository) {
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
         this.mailProducer = mailProducer;
@@ -54,39 +55,41 @@ public class UserServiceImpl implements UserService {
         Set<Role> roles = new HashSet<>();
         roles.add(Role.USER);
         user.setRoles(roles);
-        
+
         user.setAuthProvider(AuthProvider.LOCAL);
         user.setEnabled(false);
-      
-        
+
         User savedUser = userRepository.save(user);
 
         // Sinh token xác thực
         String token = UUID.randomUUID().toString();
-        VerificationToken verificationToken = new VerificationToken(token, savedUser, LocalDateTime.now().plusHours(24));
+        VerificationToken verificationToken = new VerificationToken(token, savedUser,
+                LocalDateTime.now().plusHours(24));
         verificationTokenRepository.save(verificationToken);
 
         // Gửi email xác thực
-        String verifyLink = "http://localhost:8080/api/auth/verify?token=" + token;
-        String htmlContent = """
-            <html>
-            <body>
-                <h2>Xác nhận đăng ký tài khoản</h2>
-                <p>Cảm ơn bạn đã đăng ký tài khoản tại XOXO Social Media.</p>
-                <p>Vui lòng xác nhận email bằng cách bấm vào link sau:</p>
-                <p><a href="%s" style="background-color: #4CAF50; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Xác nhận tài khoản</a></p>
-                <p>Hoặc copy link này: <a href="%s">%s</a></p>
-                <p>Link có hiệu lực trong 24 giờ.</p>
-                <p>Trân trọng,<br>Team XOXO</p>
-            </body>
-            </html>
-            """.formatted(verifyLink, verifyLink, verifyLink);
-        
+        String verifyLink = "http://localhost:3000/verify?token=" + token;
+        String htmlContent = String.format(
+                """
+                        <html>
+                        <body>
+                            <h2>Xác nhận đăng ký tài khoản</h2>
+                            <p>Cảm ơn bạn đã đăng ký tài khoản tại XOXO Social Media.</p>
+                            <p>Vui lòng xác nhận email bằng cách bấm vào link sau:</p>
+                            <p><a href=\"%s\" style=\"background-color: #4CAF50; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;\">Xác nhận tài khoản</a></p>
+                            <p>Hoặc copy link này: <a href=\"%s\">%s</a></p>
+                            <p><b>Token:</b> <span style=\"color: #d32f2f;\">%s</span></p>
+                            <p>Link có hiệu lực trong 24 giờ.</p>
+                            <p>Trân trọng,<br>Team XOXO</p>
+                        </body>
+                        </html>
+                        """,
+                verifyLink, verifyLink, verifyLink, token);
+
         MailMessage mailMessage = new MailMessage(
-            savedUser.getEmail(),
-            "Xác nhận đăng ký tài khoản",
-            htmlContent
-        );
+                savedUser.getEmail(),
+                "Xác nhận đăng ký tài khoản",
+                htmlContent);
         mailProducer.sendMail(mailMessage);
         return savedUser;
     }
@@ -133,7 +136,7 @@ public class UserServiceImpl implements UserService {
             if (targetUser.getRoles().contains(Role.ADMIN) || targetUser.getRoles().contains(Role.OWNER)) {
                 throw new ServiceException("Admin can only update user with USER role");
             }
-        
+
             return userRepository.save(user);
         }
         throw new ForbiddenException("You do not have permission to update this user");
@@ -190,56 +193,63 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public List<UserResponseProjection> findAllUsers() {
-        return userRepository.findAllUserResponses();
+    public List<UserResponseProjection> findAllUsersAdmin() {
+        return userRepository.findAllUserResponsesAdmin();
     }
 
     @Override
-    public User addRoleToUser(Long userId, Role role) {
-        User user = findById(userId, null); // No currentUser for this operation
+    public List<UserResponseProjection> findAllUsersOwner() {
+        return userRepository.findAllUserResponsesOwner();
+    }
+
+    @Override
+    public User addRoleToUser(Long userId, Role role, User currentUser) {
+        User user = findById(userId, currentUser);
         if (user == null) {
-            throw new RuntimeException("User not found");
+            throw new NotFoundException("User not found");
         }
-        
+
         Set<Role> roles = user.getRoles();
         if (roles == null) {
             roles = new HashSet<>();
         }
-        
+
+        // if(role.equals(Role.OWNER)){
+        // throw new ServiceException("Cannot add OWNER role");
+        // }
         roles.add(role);
         user.setRoles(roles);
         user.setUpdatedAt(LocalDateTime.now());
-        
+
         return userRepository.save(user);
     }
 
     @Override
-    public User removeRoleFromUser(Long userId, Role role) {
-        User user = findById(userId, null); // No currentUser for this operation
+    public User removeRoleFromUser(Long userId, Role role, User currentUser) {
+        User user = findById(userId, currentUser); // No currentUser for this operation
         if (user == null) {
-            throw new RuntimeException("User not found");
+            throw new NotFoundException("User not found");
         }
-        
+
         Set<Role> roles = user.getRoles();
         if (roles != null) {
             roles.remove(role);
             user.setRoles(roles);
             user.setUpdatedAt(LocalDateTime.now());
         }
-        
+
         return userRepository.save(user);
     }
 
     @Override
-    public User setUserRoles(Long userId, Set<Role> roles) {
-        User user = findById(userId, null); // No currentUser for this operation
+    public User setUserRoles(Long userId, Set<Role> roles, User currentUser) {
+        User user = findById(userId, currentUser); // No currentUser for this operation
         if (user == null) {
-            throw new RuntimeException("User not found");
+            throw new NotFoundException("User not found");
         }
-        
+
         user.setRoles(roles);
-        user.setUpdatedAt(LocalDateTime.now());
-        
+
         return userRepository.save(user);
     }
 
@@ -248,23 +258,77 @@ public class UserServiceImpl implements UserService {
         if (userRepository.existsByEmail(email)) {
             throw new RuntimeException("Email already exists");
         }
-        
+
         User user = new User();
         user.setEmail(email);
         user.setPassword(passwordEncoder.encode(password));
         user.setFirstName(firstName);
         user.setLastName(lastName);
-        
+
         // Set roles
         Set<Role> roles = new HashSet<>();
         roles.add(Role.ADMIN);
         user.setRoles(roles);
-        
+
         user.setAuthProvider(AuthProvider.LOCAL);
         user.setEnabled(true);
         user.setCreatedAt(LocalDateTime.now());
         user.setUpdatedAt(LocalDateTime.now());
-        
+
         return userRepository.save(user);
     }
-} 
+
+    @Override
+    public void forgotPassword(ForgotPasswordRequest request) {
+
+        User user = userRepository.findByEmail(request.getEmail())
+                .orElseThrow(() -> new NotFoundException("User not found"));
+        if (user == null) {
+            throw new NotFoundException("User not found");
+        }
+        String token = UUID.randomUUID().toString();
+        VerificationToken verificationToken = new VerificationToken(token, user, LocalDateTime.now().plusHours(1));
+        verificationTokenRepository.save(verificationToken);
+
+        String resetLink = "http://localhost:3000/reset-password?token=" + token;
+        String htmlContent = """
+                <html>
+                    <body>
+                        <h2>Reset mật khẩu</h2>
+                        <p>Cảm ơn bạn đã yêu cầu reset mật khẩu tại XOXO Social Media.</p>
+                        <p>Vui lòng nhấp vào link sau để reset mật khẩu:</p>
+                        <p><a href=\"%s\" style=\"background-color: #4CAF50; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;\">Reset mật khẩu</a></p>
+                        <p>Hoặc copy link này: <a href=\"%s\">%s</a></p>
+                        <p><b>Token:</b> <span style=\"color: #d32f2f;\">%s</span></p>
+                        <p>Link có hiệu lực trong 1 giờ.</p>
+                        <p>Trân trọng,<br>Team XOXO</p>
+                    </body>
+                </html>
+                            """
+                .formatted(resetLink, resetLink, resetLink, token);
+
+        MailMessage mailMessage = new MailMessage(
+                user.getEmail(),
+                "Reset mật khẩu",
+                htmlContent);
+        mailProducer.sendMail(mailMessage);
+    }
+
+    @Override
+    public void resetPassword(ResetPasswordRequest request) {
+
+        VerificationToken verificationToken = verificationTokenRepository.findByToken(request.getToken())
+                .orElseThrow(() -> new NotFoundException("Token not found"));
+        if (verificationToken == null) {
+            throw new NotFoundException("Token not found");
+        }
+        if (verificationToken.getExpiryDate().isBefore(LocalDateTime.now())) {
+            throw new ServiceException("Token expired");
+        }
+        User user = verificationToken.getUser();
+        user.setPassword(passwordEncoder.encode(request.getNewPassword()));
+        user.setUpdatedAt(LocalDateTime.now());
+        userRepository.save(user);
+        verificationTokenRepository.delete(verificationToken);
+    }
+}
